--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
@@ -143,7 +143,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
@@ -159,7 +159,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
@@ -175,7 +175,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
@@ -191,7 +191,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
@@ -207,7 +207,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
-                                <a href="#" class="btn">Подробнее</a>
+                                <a href="./products.html" class="btn">Подробнее</a>
                             </div>
                         </div>
                     </li>
